tests/NormalTests/paczka1/small_fuzzy/55939021.err
Error in line 3: BYhXPdUA A901 94,5
Error in line 6: BYhXPdUA A6U9 14,8
Error in line 5: 7kJY A822 6,8
Error in line 10: 7kJY A852 66,3
Error in line 8: 84HU4 A822 21,9
